<resources>
    <string name="app_name">JustTrackMe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1785119295096443</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="url">"http://test.encypher.in/jtm/index.php?action="</string>

    <!--<string name="url">"http://10.0.0.3/jtm/index.php?action="</string>-->

    <string name="imagesurl">"http://test.encypher.in/jtm/images/</string>
    <string name="title_activity_my_location">MyLocationActivity</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="activities">Activities</string>
    <string name="life_line">Life Line</string>
 <string name="maps_key" templateMergeStrategy="preserve" translatable="false">
  AIzaSyARaYxzbw5F5vaoima3qGd0J9Cax2emdxE      </string>
    <string name="premium_details">Premium Details</string>
    <string name="pay_for_this_user">Pay For This User</string>
    <string name="my_locations">My Locations</string>
    <string name="places">Places</string>
    <string name="day_wise_locations">Day-wise Locations</string>
    <string name="share">Share</string>
    <string name="premium">Premium</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_have_acc">Already have an account?</string>

    <string name="image_option">Choose image from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>
