<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color">

    <include layout="@layout/main_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView4" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgPickImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/user_registration"
                android:layout_gravity="center"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="User name"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="First Name"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="15dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Last Name"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="15dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:theme="@android:style/Theme.Holo.Light"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone No."
                    android:inputType="phone"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:maxLength="10"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:fontFamily="sans-serif"
                    android:id="@+id/edtPassword"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:id="@+id/edtEmail"/>

            </android.support.design.widget.TextInputLayout>



            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:button="@drawable/radio_button"
                    android:checked="true"
                    android:padding="10dp"/>

                <RadioButton
                    android:id="@+id/radFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="15dp"
                    android:button="@drawable/radio_button"
                    android:padding="10dp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="Register"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                style="@style/AppButtonStyle"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:layout_marginBottom="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:text="@string/already_have_acc"/>

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:text="Login"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>